// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pull content should pull correctly with type filter 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "./dummy/contentful-test-topic.ts",
      "import { ContentfulSomeOtherAction } from './contentful-some-other-action'
import { ContentfulReference } from './contentful-reference'
import { ContentfulAsset } from './contentful-asset'
/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type testTopic}
 * - {@displayField heading}
 * - {@description Topic model, a heading, an abstract and a call to action}
 * - {@name testTopic}
 */
export interface ContentfulTestTopic {
  /** @modelberry {@ignore} */
  __typename?: string
  /** @modelberry {@ignore} */
  sys?: {
    id?: string
  }
  /** @modelberry
   * - {@name Abstract}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@validations size-min0-max155 size-min1000-max200}
   */
  abstract?: string
  /** @modelberry
   * - {@name Actions}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-testAction linkContentType-someOtherAction}
   * - {@widgetId entryLinksEditor}
   */
  actionsCollection?: {
    items: (ContentfulSomeOtherAction | ContentfulReference)[]
  }
  /** @modelberry
   * - {@name Heading}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  heading?: string
  /** @modelberry
   * - {@name Icon}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  icon?: string
  /** @modelberry
   * - {@name Media}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Asset}
   * - {@widgetId assetLinksEditor}
   */
  mediaCollection?: {
    items: ContentfulAsset | ContentfulReference[]
  }
  /** @modelberry
   * - {@name Poster}
   * - {@type Link}
   * - {@linkType Asset}
   * - {@widgetId assetLinkEditor}
   */
  poster?: ContentfulAsset | ContentfulReference
}
",
    ],
    Array [
      "./dummy/contentful-test-action.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type testAction}
 * - {@displayField heading}
 * - {@name testAction}
 */
export interface ContentfulTestAction {
  /** @modelberry {@ignore} */
  __typename?: string
  /** @modelberry {@ignore} */
  sys?: {
    id?: string
  }
  /** @modelberry
   * - {@name Anchor}
   * - {@type Symbol}
   * - {@helpText Voorbeeld: mijn-anchor}
   */
  anchor?: string
  /** @modelberry
   * - {@name Description}
   * - {@type Symbol}
   * - {@helpText Omschrijving van de actie, voor zoekmachines}
   */
  description?: string
  /** @modelberry
   * - {@name Event id}
   * - {@type Symbol}
   */
  eventId?: string
  /** @modelberry
   * - {@name Heading}
   * - {@type Symbol}
   */
  heading?: string
  /** @modelberry
   * - {@name Query}
   * - {@type Symbol}
   */
  query?: string
  /** @modelberry
   * - {@name Url}
   * - {@type Symbol}
   */
  url?: string
}
",
    ],
    Array [
      "./dummy/contentful-navigation-section.ts",
      "import { ContentfulAsset } from './contentful-asset'
import { ContentfulReference } from './contentful-reference'
import { ContentfulAction } from './contentful-action'
import { ContentfulNavigationSegment } from './contentful-navigation-segment'
/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type navigationSection}
 * - {@displayField title}
 * - {@description navigationSection}
 * - {@name navigationSection}
 */
export interface ContentfulNavigationSection {
  /** @modelberry {@ignore} */
  __typename?: string
  /** @modelberry {@ignore} */
  sys?: {
    id?: string
  }
  /** @modelberry
   * - {@name Title}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  title?: string
  /** @modelberry
   * - {@name Logo}
   * - {@type Link}
   * - {@linkType Asset}
   * - {@widgetId assetLinkEditor}
   */
  logo?: ContentfulAsset | ContentfulReference
  /** @modelberry
   * - {@name Logo action}
   * - {@type Link}
   * - {@linkType Entry}
   * - {@widgetId entryLinkEditor}
   * - {@validations linkContentType-action}
   */
  logoAction?: ContentfulAction | ContentfulReference
  /** @modelberry
   * - {@name Header}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-navigationSegment}
   * - {@widgetId entryLinksEditor}
   */
  headerCollection?: {
    items: (ContentfulNavigationSegment | ContentfulReference)[]
  }
  /** @modelberry
   * - {@name Footer}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-navigationSegment}
   * - {@widgetId entryLinksEditor}
   */
  footerCollection?: {
    items: (ContentfulNavigationSegment | ContentfulReference)[]
  }
  /** @modelberry
   * - {@name Social}
   * - {@type Link}
   * - {@linkType Entry}
   * - {@widgetId entryLinkEditor}
   * - {@validations linkContentType-navigationSegment}
   */
  social?: ContentfulNavigationSegment | ContentfulReference
  /** @modelberry
   * - {@name Actions}
   * - {@type Link}
   * - {@linkType Entry}
   * - {@widgetId entryLinkEditor}
   * - {@validations linkContentType-navigationSegment}
   */
  actions?: ContentfulNavigationSegment | ContentfulReference
  /** @modelberry
   * - {@name Legal}
   * - {@type Link}
   * - {@linkType Entry}
   * - {@widgetId entryLinkEditor}
   * - {@validations linkContentType-navigationSegment}
   */
  legal?: ContentfulNavigationSegment | ContentfulReference
  /** @modelberry
   * - {@name Information}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-navigationSegment}
   * - {@widgetId entryLinksEditor}
   */
  informationCollection?: {
    items: (ContentfulNavigationSegment | ContentfulReference)[]
  }
  /** @modelberry
   * - {@name Sitemap}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-navigationSegment}
   * - {@widgetId entryLinksEditor}
   */
  sitemapCollection?: {
    items: (ContentfulNavigationSegment | ContentfulReference)[]
  }
}
",
    ],
    Array [
      "./dummy/contentful-topic-section.ts",
      "import { ContentfulTopic } from './contentful-topic'
import { ContentfulReference } from './contentful-reference'
/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type topicSection}
 * - {@displayField title}
 * - {@description Topic section}
 * - {@name topicSection}
 */
export interface ContentfulTopicSection {
  /** @modelberry {@ignore} */
  __typename?: string
  /** @modelberry {@ignore} */
  sys?: {
    id?: string
  }
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Sectie weergave}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@helpText Hoe de sectie wordt weergegeven}
   * - {@validations in-block-card-divider}
   */
  variant?: string
  /** @modelberry
   * - {@name Sectie onderwerpen}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-topic}
   * - {@widgetId entryLinksEditor}
   * - {@helpText Eén of meerder onderwerpen die worden weergegeven in de sectie}
   */
  topicsCollection?: {
    items: (ContentfulTopic | ContentfulReference)[]
  }
  /** @modelberry
   * - {@name Hide icon}
   * - {@type Boolean}
   * - {@widgetId boolean}
   */
  hideIcon?: boolean
  /** @modelberry
   * - {@name Hide media}
   * - {@type Boolean}
   * - {@widgetId boolean}
   */
  hideMedia?: boolean
  /** @modelberry
   * - {@name Hide heading}
   * - {@type Boolean}
   * - {@widgetId boolean}
   */
  hideHeading?: boolean
  /** @modelberry
   * - {@name Hide abstract}
   * - {@type Boolean}
   * - {@widgetId boolean}
   */
  hideAbstract?: boolean
  /** @modelberry
   * - {@name Hide action}
   * - {@type Boolean}
   * - {@widgetId boolean}
   */
  hideAction?: boolean
  /** @modelberry
   * - {@name Reversed order}
   * - {@type Boolean}
   * - {@widgetId boolean}
   */
  reversedOrder?: boolean
  /** @modelberry
   * - {@name Event id}
   * - {@type Symbol}
   * - {@widgetId slugEditor}
   * - {@helpText Voorbeeld: mijn-event-id}
   * - {@validations unique-true}
   */
  eventId?: string
  /** @modelberry
   * - {@name Sectie thema}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@helpText Kies het thema voor deze sectie}
   * - {@validations in-glacierLight-glacierDark}
   */
  theme?: string
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/contentful-topic.ts",
      "import { ContentfulAsset } from './contentful-asset'
import { ContentfulReference } from './contentful-reference'
import { ContentfulAction } from './contentful-action'
import { ContentfulEmbed } from './contentful-embed'
/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type topic}
 * - {@displayField title}
 * - {@description Topic}
 * - {@name topic}
 */
export interface ContentfulTopic {
  /** @modelberry {@ignore} */
  __typename?: string
  /** @modelberry {@ignore} */
  sys?: {
    id?: string
  }
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Onderwerp titel}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Titel van het onderwerp, zonder punt aan eind}
   */
  heading?: string
  /** @modelberry
   * - {@name Onderwerp tekst}
   * - {@type Text}
   * - {@widgetId multipleLine}
   * - {@helpText Korte omschrijving van het onderwerp, sluit af met een punt}
   */
  abstract?: string
  /** @modelberry
   * - {@name Onderwerp afbeelding}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Asset}
   * - {@widgetId assetGalleryEditor}
   * - {@helpText Afbeelding bij het onderwerp}
   * - {@validations size-min1-max4}
   */
  mediaCollection?: {
    items: ContentfulAsset | ContentfulReference[]
  }
  /** @modelberry
   * - {@name Onderwerp icoon}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@helpText Icoon bij het onderwerp}
   * - {@validations in-activity-airplay}
   */
  icon?: string
  /** @modelberry
   * - {@name Onderwerp acties}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-action}
   * - {@widgetId entryLinksEditor}
   * - {@helpText Eén of meerdere acties bij het onderwerp. Een actie heeft een eigen naam en kan ook linken naar een extern bron.}
   */
  actionsCollection?: {
    items: (ContentfulAction | ContentfulReference)[]
  }
  /** @modelberry
   * - {@name Poster}
   * - {@type Link}
   * - {@linkType Asset}
   * - {@widgetId assetLinkEditor}
   * - {@validations linkMimetypeGroup-image}
   */
  poster?: ContentfulAsset | ContentfulReference
  /** @modelberry
   * - {@name Media embed}
   * - {@type Link}
   * - {@linkType Entry}
   * - {@widgetId entryLinkEditor}
   * - {@helpText Voeg Youtube/Vimeo embed code toe. Note: Media embed ondersteund alleen Embed-type: html}
   * - {@validations linkContentType-embed}
   */
  mediaEmbed?: ContentfulEmbed | ContentfulReference
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/contentful-text-section.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type textSection}
 * - {@displayField title}
 * - {@description Text section}
 * - {@name textSection}
 */
export interface ContentfulTextSection {
  /** @modelberry {@ignore} */
  __typename?: string
  /** @modelberry {@ignore} */
  sys?: {
    id?: string
  }
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Variant}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@validations in-text}
   */
  variant?: string
  /** @modelberry
   * - {@name Tekst}
   * - {@required true}
   * - {@type RichText}
   * - {@widgetId richTextEditor}
   * - {@helpText Eenvoudig opgemaakte tekstveld met kopjes en afbeeldingen}
   * - {@validations enabledMarks-bold-italic-underline richText}
   */
  text: {
    json?: any
  }
  /** @modelberry
   * - {@name Event id}
   * - {@type Symbol}
   * - {@widgetId slugEditor}
   * - {@helpText Voorbeeld: mijn-event-id}
   * - {@validations unique-true}
   */
  eventId?: string
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/contentful-navigation-segment.ts",
      "import { ContentfulAction } from './contentful-action'
import { ContentfulReference } from './contentful-reference'
/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type navigationSegment}
 * - {@displayField title}
 * - {@description Navigation segment}
 * - {@name navigationSegment}
 */
export interface ContentfulNavigationSegment {
  /** @modelberry {@ignore} */
  __typename?: string
  /** @modelberry {@ignore} */
  sys?: {
    id?: string
  }
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Navigatiesegment titel}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText De naam van dit navigatiesegment. Alleen nodig bij meerdere segmenten.}
   */
  heading?: string
  /** @modelberry
   * - {@name Segment tekst}
   * - {@type Text}
   * - {@widgetId multipleLine}
   * - {@helpText Tekst voor dit menu segment}
   */
  abstract?: string
  /** @modelberry
   * - {@name Acties voor dit segment}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-action}
   * - {@widgetId entryLinksEditor}
   * - {@helpText De pagina's in dit navigatie segment.}
   */
  actionsCollection?: {
    items: (ContentfulAction | ContentfulReference)[]
  }
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/contentful-page.ts",
      "import { ContentfulNavigationSection } from './contentful-navigation-section'
import { ContentfulTableSection } from './contentful-table-section'
import { ContentfulTextSection } from './contentful-text-section'
import { ContentfulTopicSection } from './contentful-topic-section'
import { ContentfulReference } from './contentful-reference'
import { ContentfulAsset } from './contentful-asset'
/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type page}
 * - {@displayField title}
 * - {@description Page}
 * - {@name page}
 */
export interface ContentfulPage {
  /** @modelberry {@ignore} */
  __typename?: string
  /** @modelberry {@ignore} */
  sys?: {
    id?: string
  }
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Pagina URL}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Laatste deel van de URL naar deze pagina. Bijvoorbeeld: www.mijnsite.nl/stel-dit-deel-hier-in}
   * - {@validations regexp-1 unique-true}
   */
  path: string
  /** @modelberry
   * - {@name Paginasecties}
   * - {@required true}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-navigationSection-tableSection-textSection}
   * - {@widgetId entryLinksEditor}
   * - {@helpText Kies de secties die met elkaar deze pagina vormen}
   */
  sectionsCollection: {
    items: (
      | ContentfulNavigationSection
      | ContentfulTableSection
      | ContentfulTextSection
      | ContentfulTopicSection
      | ContentfulReference
    )[]
  }
  /** @modelberry
   * - {@name Paginathema}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@helpText Kies het thema voor deze pagina}
   * - {@validations in-glacierLight-glacierDark}
   */
  theme?: string
  /** @modelberry
   * - {@name SEO titel}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Titel van de pagina, gebruikt door zoek machines zoals Google}
   */
  seoTitle?: string
  /** @modelberry
   * - {@name SEO omschrijving}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Omschrijving van de pagina, gebruikt door zoek machines zoals Google}
   * - {@validations size-min0-max155}
   */
  seoDescription?: string
  /** @modelberry
   * - {@name SEO afbeelding}
   * - {@type Link}
   * - {@linkType Asset}
   * - {@widgetId assetLinkEditor}
   * - {@helpText Afbeelding bij de pagina, wordt meegegeven aan een link en weergegeven door social media}
   * - {@validations linkMimetypeGroup-image}
   */
  seoImage?: ContentfulAsset | ContentfulReference
  /** @modelberry
   * - {@name Seo keywords}
   * - {@type Array}
   * - {@itemsType Symbol}
   * - {@widgetId tagEditor}
   */
  seoKeywords?: string[]
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/contentful-globals.ts",
      "import { ContentfulAsset } from './contentful-asset'
import { ContentfulReference } from './contentful-reference'
import { ContentfulEmbed } from './contentful-embed'
/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type globals}
 * - {@displayField title}
 * - {@description Globals}
 * - {@name globals}
 */
export interface ContentfulGlobals {
  /** @modelberry {@ignore} */
  __typename?: string
  /** @modelberry {@ignore} */
  sys?: {
    id?: string
  }
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Site auteur}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Beschiknaar in alle secties}
   */
  siteAuthor?: string
  /** @modelberry
   * - {@name Site omschrijving}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Omschrijving van de site, gebruikt door zoek machines zoals Google}
   */
  siteDescription?: string
  /** @modelberry
   * - {@name Site titel}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Titel van de site, gebruikt door zoek machines zoals Google}
   */
  siteHeading?: string
  /** @modelberry
   * - {@name Site sleutelwoorden}
   * - {@type Array}
   * - {@itemsType Symbol}
   * - {@widgetId tagEditor}
   * - {@helpText Sleutelwoorden voor de site, gebruikt door zoek machines zoals Google}
   */
  siteKeywords?: string[]
  /** @modelberry
   * - {@name Site image}
   * - {@type Link}
   * - {@linkType Asset}
   * - {@widgetId assetLinkEditor}
   * - {@validations linkMimetypeGroup-image}
   */
  siteImage?: ContentfulAsset | ContentfulReference
  /** @modelberry
   * - {@name Site embeds}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-embed}
   * - {@widgetId entryLinksEditor}
   */
  siteEmbedsCollection?: {
    items: (ContentfulEmbed | ContentfulReference)[]
  }
  /** @modelberry
   * - {@name Direct naar content}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Tekst voor schermlezers om direct door te gaan naar de content.}
   */
  skipToContentHeading?: string
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/contentful-embed.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type embed}
 * - {@displayField title}
 * - {@description Embed}
 * - {@name embed}
 */
export interface ContentfulEmbed {
  /** @modelberry {@ignore} */
  __typename?: string
  /** @modelberry {@ignore} */
  sys?: {
    id?: string
  }
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Code}
   * - {@type Text}
   * - {@widgetId multipleLine}
   */
  code?: string
  /** @modelberry
   * - {@name Type}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@validations in-html-js-action-js-app}
   */
  type?: string
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/contentful-action.ts",
      "import { ContentfulPage } from './contentful-page'
import { ContentfulReference } from './contentful-reference'
/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type action}
 * - {@displayField title}
 * - {@description Action}
 * - {@name action}
 */
export interface ContentfulAction {
  /** @modelberry {@ignore} */
  __typename?: string
  /** @modelberry {@ignore} */
  sys?: {
    id?: string
  }
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Actie naam}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Naam van de actie, zonder punt aan eind}
   */
  heading?: string
  /** @modelberry
   * - {@name Actie omschrijving}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Omschrijving van de actie, voor zoekmachines}
   */
  description?: string
  /** @modelberry
   * - {@name Icon}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@validations in-activity-airplay}
   */
  icon?: string
  /** @modelberry
   * - {@name Actie paginalink}
   * - {@type Link}
   * - {@linkType Entry}
   * - {@widgetId entryLinkEditor}
   * - {@helpText De pagina waar de actie naar linkt (of gebruik de URL)}
   * - {@validations linkContentType-page}
   */
  page?: ContentfulPage | ContentfulReference
  /** @modelberry
   * - {@name Actie URL}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText De URL waar de actie naar linkt (of gebruik de paginalink)}
   * - {@validations regexp-2}
   */
  url?: string
  /** @modelberry
   * - {@name Anchor}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Voorbeeld: mijn-anchor}
   */
  anchor?: string
  /** @modelberry
   * - {@name Query}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Voorbeeld: &x=1&y=2}
   */
  query?: string
  /** @modelberry
   * - {@name Event id}
   * - {@type Symbol}
   * - {@widgetId slugEditor}
   * - {@helpText Voorbeeld: mijn-event-id}
   * - {@validations unique-true}
   */
  eventId?: string
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/contentful-asset.ts",
      "export type ContentfulAsset = {
  sys: {
    id: string
  }
  contentType: string
  description: string
  fileName: string
  height: number
  size: number
  title: string
  url: string
  width: number
}
",
    ],
    Array [
      "./dummy/contentful-reference.ts",
      "export type ContentfulReference = {
  sys: {
    id: string
  }
}
",
    ],
    Array [
      "./dummy/main.ts",
      "import { ModelberryPluginData } from '@modelberry/plugin-contentful/plain'
export * from './contentful-test-topic'
export * from './contentful-test-action'
export * from './contentful-navigation-section'
export * from './contentful-topic-section'
export * from './contentful-topic'
export * from './contentful-text-section'
export * from './contentful-navigation-segment'
export * from './contentful-page'
export * from './contentful-globals'
export * from './contentful-embed'
export * from './contentful-action'
export const modelberryPluginData: ModelberryPluginData = {
  '@modelberry/plugin-contentful/plain': {
    validations: {
      'size-min0-max155': { size: { max: 155, min: 0 } },
      'size-min1000-max200': { size: { max: 200, min: 1000 } },
      'linkContentType-testAction': { linkContentType: ['testAction'] },
      'linkContentType-someOtherAction': {
        linkContentType: ['someOtherAction'],
      },
      'linkContentType-action': { linkContentType: ['action'] },
      'linkContentType-navigationSegment': {
        linkContentType: ['navigationSegment'],
      },
      'in-block-card-divider': {
        in: [
          'block',
          'card',
          'divider',
          'featured',
          'gallery',
          'headline',
          'hero',
          'image',
          'quote',
          'showcase',
          'video',
        ],
      },
      'linkContentType-topic': { linkContentType: ['topic'] },
      'unique-true': { unique: true },
      'in-glacierLight-glacierDark': { in: ['glacierLight', 'glacierDark'] },
      'size-min1-max4': { size: { min: 1, max: 4 } },
      'in-activity-airplay': { in: ['activity', 'airplay'] },
      'linkMimetypeGroup-image': { linkMimetypeGroup: ['image'] },
      'linkContentType-embed': { linkContentType: ['embed'] },
      'in-text': { in: ['text'] },
      'enabledMarks-bold-italic-underline': {
        enabledMarks: ['bold', 'italic', 'underline', 'code'],
        message: 'Only bold, italic, underline, and code marks are allowed',
      },
      richText: {
        nodes: {
          'embedded-entry-block': [
            { linkContentType: ['embed', 'topicSection'] },
          ],
          'embedded-entry-inline': [
            { linkContentType: ['embed', 'topicSection'], message: null },
          ],
        },
      },
      'regexp-1': {
        message: 'Please use a valid path: /this/is/a/valid/path/with/:slug',
        regexp: {
          pattern: '^\\\\\\\\/[a-z0-9:\\\\\\\\._/~%\\\\\\\\-\\\\\\\\+&\\\\\\\\#\\\\\\\\?!=\\\\\\\\(\\\\\\\\)@]*$',
          flags: '',
        },
      },
      'linkContentType-navigationSection-tableSection-textSection': {
        linkContentType: [
          'navigationSection',
          'tableSection',
          'textSection',
          'topicSection',
        ],
      },
      'in-html-js-action-js-app': {
        in: [
          'html',
          'js-action',
          'js-app',
          'js-page-section',
          'js-page',
          'youtube',
        ],
      },
      'linkContentType-page': { linkContentType: ['page'] },
      'regexp-2': {
        message: 'Please use a valid url: https://this/is/a/valid/url',
        regexp: {
          pattern:
            '^(ftp|http|https):\\\\\\\\/\\\\\\\\/(\\\\\\\\w+:{0,1}\\\\\\\\w*@)?(\\\\\\\\S+)(:[0-9]+)?(\\\\\\\\/|\\\\\\\\/([\\\\\\\\w#!:.?+=&%@!\\\\\\\\-/]))?$',
          flags: '',
        },
      },
    },
  },
}
",
    ],
    Array [
      "./dummy/contentful-test-topic.ts",
      "import { ContentfulSomeOtherAction } from './contentful-some-other-action'
import { ContentfulReference } from './contentful-reference'
import { ContentfulAsset } from './contentful-asset'
/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type testTopic}
 * - {@displayField heading}
 * - {@description Topic model, a heading, an abstract and a call to action}
 * - {@name testTopic}
 */
export interface ContentfulTestTopic {
  /** @modelberry {@ignore} */
  __typename?: string
  /** @modelberry {@ignore} */
  sys?: {
    id?: string
  }
  /** @modelberry
   * - {@name Abstract}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@validations size-min0-max155 size-min100-max200}
   */
  abstract?: string
  /** @modelberry
   * - {@name Actions}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-testAction linkContentType-someOtherAction}
   * - {@widgetId entryLinksEditor}
   */
  actionsCollection?: {
    items: (ContentfulSomeOtherAction | ContentfulReference)[]
  }
  /** @modelberry
   * - {@name Heading}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  heading?: string
  /** @modelberry
   * - {@name Icon}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  icon?: string
  /** @modelberry
   * - {@name Media}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Asset}
   * - {@widgetId assetLinksEditor}
   */
  mediaCollection?: {
    items: ContentfulAsset | ContentfulReference[]
  }
  /** @modelberry
   * - {@name Poster}
   * - {@type Link}
   * - {@linkType Asset}
   * - {@widgetId assetLinkEditor}
   */
  poster?: ContentfulAsset | ContentfulReference
}
",
    ],
    Array [
      "./dummy/contentful-asset.ts",
      "export type ContentfulAsset = {
  sys: {
    id: string
  }
  contentType: string
  description: string
  fileName: string
  height: number
  size: number
  title: string
  url: string
  width: number
}
",
    ],
    Array [
      "./dummy/contentful-reference.ts",
      "export type ContentfulReference = {
  sys: {
    id: string
  }
}
",
    ],
    Array [
      "./dummy/main.ts",
      "import { ModelberryPluginData } from '@modelberry/plugin-contentful/plain'
export * from './contentful-test-topic'
export const modelberryPluginData: ModelberryPluginData = {
  '@modelberry/plugin-contentful/plain': {
    validations: {
      'size-min0-max155': { size: { max: 155, min: 0 } },
      'size-min100-max200': { size: { max: 200, min: 100 } },
      'linkContentType-testAction': { linkContentType: ['testAction'] },
      'linkContentType-someOtherAction': {
        linkContentType: ['someOtherAction'],
      },
    },
  },
}
",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Pull content should pull correctly without type filter 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "./dummy/contentful-test-topic.ts",
      "import { ContentfulSomeOtherAction } from './contentful-some-other-action'
import { ContentfulReference } from './contentful-reference'
import { ContentfulAsset } from './contentful-asset'
/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type testTopic}
 * - {@displayField heading}
 * - {@description Topic model, a heading, an abstract and a call to action}
 * - {@name testTopic}
 */
export interface ContentfulTestTopic {
  /** @modelberry {@ignore} */
  __typename?: string
  /** @modelberry {@ignore} */
  sys?: {
    id?: string
  }
  /** @modelberry
   * - {@name Abstract}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@validations size-min0-max155 size-min1000-max200}
   */
  abstract?: string
  /** @modelberry
   * - {@name Actions}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-testAction linkContentType-someOtherAction}
   * - {@widgetId entryLinksEditor}
   */
  actionsCollection?: {
    items: (ContentfulSomeOtherAction | ContentfulReference)[]
  }
  /** @modelberry
   * - {@name Heading}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  heading?: string
  /** @modelberry
   * - {@name Icon}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  icon?: string
  /** @modelberry
   * - {@name Media}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Asset}
   * - {@widgetId assetLinksEditor}
   */
  mediaCollection?: {
    items: ContentfulAsset | ContentfulReference[]
  }
  /** @modelberry
   * - {@name Poster}
   * - {@type Link}
   * - {@linkType Asset}
   * - {@widgetId assetLinkEditor}
   */
  poster?: ContentfulAsset | ContentfulReference
}
",
    ],
    Array [
      "./dummy/contentful-test-action.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type testAction}
 * - {@displayField heading}
 * - {@name testAction}
 */
export interface ContentfulTestAction {
  /** @modelberry {@ignore} */
  __typename?: string
  /** @modelberry {@ignore} */
  sys?: {
    id?: string
  }
  /** @modelberry
   * - {@name Anchor}
   * - {@type Symbol}
   * - {@helpText Voorbeeld: mijn-anchor}
   */
  anchor?: string
  /** @modelberry
   * - {@name Description}
   * - {@type Symbol}
   * - {@helpText Omschrijving van de actie, voor zoekmachines}
   */
  description?: string
  /** @modelberry
   * - {@name Event id}
   * - {@type Symbol}
   */
  eventId?: string
  /** @modelberry
   * - {@name Heading}
   * - {@type Symbol}
   */
  heading?: string
  /** @modelberry
   * - {@name Query}
   * - {@type Symbol}
   */
  query?: string
  /** @modelberry
   * - {@name Url}
   * - {@type Symbol}
   */
  url?: string
}
",
    ],
    Array [
      "./dummy/contentful-navigation-section.ts",
      "import { ContentfulAsset } from './contentful-asset'
import { ContentfulReference } from './contentful-reference'
import { ContentfulAction } from './contentful-action'
import { ContentfulNavigationSegment } from './contentful-navigation-segment'
/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type navigationSection}
 * - {@displayField title}
 * - {@description navigationSection}
 * - {@name navigationSection}
 */
export interface ContentfulNavigationSection {
  /** @modelberry {@ignore} */
  __typename?: string
  /** @modelberry {@ignore} */
  sys?: {
    id?: string
  }
  /** @modelberry
   * - {@name Title}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  title?: string
  /** @modelberry
   * - {@name Logo}
   * - {@type Link}
   * - {@linkType Asset}
   * - {@widgetId assetLinkEditor}
   */
  logo?: ContentfulAsset | ContentfulReference
  /** @modelberry
   * - {@name Logo action}
   * - {@type Link}
   * - {@linkType Entry}
   * - {@widgetId entryLinkEditor}
   * - {@validations linkContentType-action}
   */
  logoAction?: ContentfulAction | ContentfulReference
  /** @modelberry
   * - {@name Header}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-navigationSegment}
   * - {@widgetId entryLinksEditor}
   */
  headerCollection?: {
    items: (ContentfulNavigationSegment | ContentfulReference)[]
  }
  /** @modelberry
   * - {@name Footer}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-navigationSegment}
   * - {@widgetId entryLinksEditor}
   */
  footerCollection?: {
    items: (ContentfulNavigationSegment | ContentfulReference)[]
  }
  /** @modelberry
   * - {@name Social}
   * - {@type Link}
   * - {@linkType Entry}
   * - {@widgetId entryLinkEditor}
   * - {@validations linkContentType-navigationSegment}
   */
  social?: ContentfulNavigationSegment | ContentfulReference
  /** @modelberry
   * - {@name Actions}
   * - {@type Link}
   * - {@linkType Entry}
   * - {@widgetId entryLinkEditor}
   * - {@validations linkContentType-navigationSegment}
   */
  actions?: ContentfulNavigationSegment | ContentfulReference
  /** @modelberry
   * - {@name Legal}
   * - {@type Link}
   * - {@linkType Entry}
   * - {@widgetId entryLinkEditor}
   * - {@validations linkContentType-navigationSegment}
   */
  legal?: ContentfulNavigationSegment | ContentfulReference
  /** @modelberry
   * - {@name Information}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-navigationSegment}
   * - {@widgetId entryLinksEditor}
   */
  informationCollection?: {
    items: (ContentfulNavigationSegment | ContentfulReference)[]
  }
  /** @modelberry
   * - {@name Sitemap}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-navigationSegment}
   * - {@widgetId entryLinksEditor}
   */
  sitemapCollection?: {
    items: (ContentfulNavigationSegment | ContentfulReference)[]
  }
}
",
    ],
    Array [
      "./dummy/contentful-topic-section.ts",
      "import { ContentfulTopic } from './contentful-topic'
import { ContentfulReference } from './contentful-reference'
/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type topicSection}
 * - {@displayField title}
 * - {@description Topic section}
 * - {@name topicSection}
 */
export interface ContentfulTopicSection {
  /** @modelberry {@ignore} */
  __typename?: string
  /** @modelberry {@ignore} */
  sys?: {
    id?: string
  }
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Sectie weergave}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@helpText Hoe de sectie wordt weergegeven}
   * - {@validations in-block-card-divider}
   */
  variant?: string
  /** @modelberry
   * - {@name Sectie onderwerpen}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-topic}
   * - {@widgetId entryLinksEditor}
   * - {@helpText Eén of meerder onderwerpen die worden weergegeven in de sectie}
   */
  topicsCollection?: {
    items: (ContentfulTopic | ContentfulReference)[]
  }
  /** @modelberry
   * - {@name Hide icon}
   * - {@type Boolean}
   * - {@widgetId boolean}
   */
  hideIcon?: boolean
  /** @modelberry
   * - {@name Hide media}
   * - {@type Boolean}
   * - {@widgetId boolean}
   */
  hideMedia?: boolean
  /** @modelberry
   * - {@name Hide heading}
   * - {@type Boolean}
   * - {@widgetId boolean}
   */
  hideHeading?: boolean
  /** @modelberry
   * - {@name Hide abstract}
   * - {@type Boolean}
   * - {@widgetId boolean}
   */
  hideAbstract?: boolean
  /** @modelberry
   * - {@name Hide action}
   * - {@type Boolean}
   * - {@widgetId boolean}
   */
  hideAction?: boolean
  /** @modelberry
   * - {@name Reversed order}
   * - {@type Boolean}
   * - {@widgetId boolean}
   */
  reversedOrder?: boolean
  /** @modelberry
   * - {@name Event id}
   * - {@type Symbol}
   * - {@widgetId slugEditor}
   * - {@helpText Voorbeeld: mijn-event-id}
   * - {@validations unique-true}
   */
  eventId?: string
  /** @modelberry
   * - {@name Sectie thema}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@helpText Kies het thema voor deze sectie}
   * - {@validations in-glacierLight-glacierDark}
   */
  theme?: string
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/contentful-topic.ts",
      "import { ContentfulAsset } from './contentful-asset'
import { ContentfulReference } from './contentful-reference'
import { ContentfulAction } from './contentful-action'
import { ContentfulEmbed } from './contentful-embed'
/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type topic}
 * - {@displayField title}
 * - {@description Topic}
 * - {@name topic}
 */
export interface ContentfulTopic {
  /** @modelberry {@ignore} */
  __typename?: string
  /** @modelberry {@ignore} */
  sys?: {
    id?: string
  }
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Onderwerp titel}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Titel van het onderwerp, zonder punt aan eind}
   */
  heading?: string
  /** @modelberry
   * - {@name Onderwerp tekst}
   * - {@type Text}
   * - {@widgetId multipleLine}
   * - {@helpText Korte omschrijving van het onderwerp, sluit af met een punt}
   */
  abstract?: string
  /** @modelberry
   * - {@name Onderwerp afbeelding}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Asset}
   * - {@widgetId assetGalleryEditor}
   * - {@helpText Afbeelding bij het onderwerp}
   * - {@validations size-min1-max4}
   */
  mediaCollection?: {
    items: ContentfulAsset | ContentfulReference[]
  }
  /** @modelberry
   * - {@name Onderwerp icoon}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@helpText Icoon bij het onderwerp}
   * - {@validations in-activity-airplay}
   */
  icon?: string
  /** @modelberry
   * - {@name Onderwerp acties}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-action}
   * - {@widgetId entryLinksEditor}
   * - {@helpText Eén of meerdere acties bij het onderwerp. Een actie heeft een eigen naam en kan ook linken naar een extern bron.}
   */
  actionsCollection?: {
    items: (ContentfulAction | ContentfulReference)[]
  }
  /** @modelberry
   * - {@name Poster}
   * - {@type Link}
   * - {@linkType Asset}
   * - {@widgetId assetLinkEditor}
   * - {@validations linkMimetypeGroup-image}
   */
  poster?: ContentfulAsset | ContentfulReference
  /** @modelberry
   * - {@name Media embed}
   * - {@type Link}
   * - {@linkType Entry}
   * - {@widgetId entryLinkEditor}
   * - {@helpText Voeg Youtube/Vimeo embed code toe. Note: Media embed ondersteund alleen Embed-type: html}
   * - {@validations linkContentType-embed}
   */
  mediaEmbed?: ContentfulEmbed | ContentfulReference
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/contentful-text-section.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type textSection}
 * - {@displayField title}
 * - {@description Text section}
 * - {@name textSection}
 */
export interface ContentfulTextSection {
  /** @modelberry {@ignore} */
  __typename?: string
  /** @modelberry {@ignore} */
  sys?: {
    id?: string
  }
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Variant}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@validations in-text}
   */
  variant?: string
  /** @modelberry
   * - {@name Tekst}
   * - {@required true}
   * - {@type RichText}
   * - {@widgetId richTextEditor}
   * - {@helpText Eenvoudig opgemaakte tekstveld met kopjes en afbeeldingen}
   * - {@validations enabledMarks-bold-italic-underline richText}
   */
  text: {
    json?: any
  }
  /** @modelberry
   * - {@name Event id}
   * - {@type Symbol}
   * - {@widgetId slugEditor}
   * - {@helpText Voorbeeld: mijn-event-id}
   * - {@validations unique-true}
   */
  eventId?: string
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/contentful-navigation-segment.ts",
      "import { ContentfulAction } from './contentful-action'
import { ContentfulReference } from './contentful-reference'
/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type navigationSegment}
 * - {@displayField title}
 * - {@description Navigation segment}
 * - {@name navigationSegment}
 */
export interface ContentfulNavigationSegment {
  /** @modelberry {@ignore} */
  __typename?: string
  /** @modelberry {@ignore} */
  sys?: {
    id?: string
  }
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Navigatiesegment titel}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText De naam van dit navigatiesegment. Alleen nodig bij meerdere segmenten.}
   */
  heading?: string
  /** @modelberry
   * - {@name Segment tekst}
   * - {@type Text}
   * - {@widgetId multipleLine}
   * - {@helpText Tekst voor dit menu segment}
   */
  abstract?: string
  /** @modelberry
   * - {@name Acties voor dit segment}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-action}
   * - {@widgetId entryLinksEditor}
   * - {@helpText De pagina's in dit navigatie segment.}
   */
  actionsCollection?: {
    items: (ContentfulAction | ContentfulReference)[]
  }
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/contentful-page.ts",
      "import { ContentfulNavigationSection } from './contentful-navigation-section'
import { ContentfulTableSection } from './contentful-table-section'
import { ContentfulTextSection } from './contentful-text-section'
import { ContentfulTopicSection } from './contentful-topic-section'
import { ContentfulReference } from './contentful-reference'
import { ContentfulAsset } from './contentful-asset'
/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type page}
 * - {@displayField title}
 * - {@description Page}
 * - {@name page}
 */
export interface ContentfulPage {
  /** @modelberry {@ignore} */
  __typename?: string
  /** @modelberry {@ignore} */
  sys?: {
    id?: string
  }
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Pagina URL}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Laatste deel van de URL naar deze pagina. Bijvoorbeeld: www.mijnsite.nl/stel-dit-deel-hier-in}
   * - {@validations regexp-1 unique-true}
   */
  path: string
  /** @modelberry
   * - {@name Paginasecties}
   * - {@required true}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-navigationSection-tableSection-textSection}
   * - {@widgetId entryLinksEditor}
   * - {@helpText Kies de secties die met elkaar deze pagina vormen}
   */
  sectionsCollection: {
    items: (
      | ContentfulNavigationSection
      | ContentfulTableSection
      | ContentfulTextSection
      | ContentfulTopicSection
      | ContentfulReference
    )[]
  }
  /** @modelberry
   * - {@name Paginathema}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@helpText Kies het thema voor deze pagina}
   * - {@validations in-glacierLight-glacierDark}
   */
  theme?: string
  /** @modelberry
   * - {@name SEO titel}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Titel van de pagina, gebruikt door zoek machines zoals Google}
   */
  seoTitle?: string
  /** @modelberry
   * - {@name SEO omschrijving}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Omschrijving van de pagina, gebruikt door zoek machines zoals Google}
   * - {@validations size-min0-max155}
   */
  seoDescription?: string
  /** @modelberry
   * - {@name SEO afbeelding}
   * - {@type Link}
   * - {@linkType Asset}
   * - {@widgetId assetLinkEditor}
   * - {@helpText Afbeelding bij de pagina, wordt meegegeven aan een link en weergegeven door social media}
   * - {@validations linkMimetypeGroup-image}
   */
  seoImage?: ContentfulAsset | ContentfulReference
  /** @modelberry
   * - {@name Seo keywords}
   * - {@type Array}
   * - {@itemsType Symbol}
   * - {@widgetId tagEditor}
   */
  seoKeywords?: string[]
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/contentful-globals.ts",
      "import { ContentfulAsset } from './contentful-asset'
import { ContentfulReference } from './contentful-reference'
import { ContentfulEmbed } from './contentful-embed'
/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type globals}
 * - {@displayField title}
 * - {@description Globals}
 * - {@name globals}
 */
export interface ContentfulGlobals {
  /** @modelberry {@ignore} */
  __typename?: string
  /** @modelberry {@ignore} */
  sys?: {
    id?: string
  }
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Site auteur}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Beschiknaar in alle secties}
   */
  siteAuthor?: string
  /** @modelberry
   * - {@name Site omschrijving}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Omschrijving van de site, gebruikt door zoek machines zoals Google}
   */
  siteDescription?: string
  /** @modelberry
   * - {@name Site titel}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Titel van de site, gebruikt door zoek machines zoals Google}
   */
  siteHeading?: string
  /** @modelberry
   * - {@name Site sleutelwoorden}
   * - {@type Array}
   * - {@itemsType Symbol}
   * - {@widgetId tagEditor}
   * - {@helpText Sleutelwoorden voor de site, gebruikt door zoek machines zoals Google}
   */
  siteKeywords?: string[]
  /** @modelberry
   * - {@name Site image}
   * - {@type Link}
   * - {@linkType Asset}
   * - {@widgetId assetLinkEditor}
   * - {@validations linkMimetypeGroup-image}
   */
  siteImage?: ContentfulAsset | ContentfulReference
  /** @modelberry
   * - {@name Site embeds}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-embed}
   * - {@widgetId entryLinksEditor}
   */
  siteEmbedsCollection?: {
    items: (ContentfulEmbed | ContentfulReference)[]
  }
  /** @modelberry
   * - {@name Direct naar content}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Tekst voor schermlezers om direct door te gaan naar de content.}
   */
  skipToContentHeading?: string
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/contentful-embed.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type embed}
 * - {@displayField title}
 * - {@description Embed}
 * - {@name embed}
 */
export interface ContentfulEmbed {
  /** @modelberry {@ignore} */
  __typename?: string
  /** @modelberry {@ignore} */
  sys?: {
    id?: string
  }
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Code}
   * - {@type Text}
   * - {@widgetId multipleLine}
   */
  code?: string
  /** @modelberry
   * - {@name Type}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@validations in-html-js-action-js-app}
   */
  type?: string
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/contentful-action.ts",
      "import { ContentfulPage } from './contentful-page'
import { ContentfulReference } from './contentful-reference'
/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type action}
 * - {@displayField title}
 * - {@description Action}
 * - {@name action}
 */
export interface ContentfulAction {
  /** @modelberry {@ignore} */
  __typename?: string
  /** @modelberry {@ignore} */
  sys?: {
    id?: string
  }
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Actie naam}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Naam van de actie, zonder punt aan eind}
   */
  heading?: string
  /** @modelberry
   * - {@name Actie omschrijving}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Omschrijving van de actie, voor zoekmachines}
   */
  description?: string
  /** @modelberry
   * - {@name Icon}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@validations in-activity-airplay}
   */
  icon?: string
  /** @modelberry
   * - {@name Actie paginalink}
   * - {@type Link}
   * - {@linkType Entry}
   * - {@widgetId entryLinkEditor}
   * - {@helpText De pagina waar de actie naar linkt (of gebruik de URL)}
   * - {@validations linkContentType-page}
   */
  page?: ContentfulPage | ContentfulReference
  /** @modelberry
   * - {@name Actie URL}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText De URL waar de actie naar linkt (of gebruik de paginalink)}
   * - {@validations regexp-2}
   */
  url?: string
  /** @modelberry
   * - {@name Anchor}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Voorbeeld: mijn-anchor}
   */
  anchor?: string
  /** @modelberry
   * - {@name Query}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Voorbeeld: &x=1&y=2}
   */
  query?: string
  /** @modelberry
   * - {@name Event id}
   * - {@type Symbol}
   * - {@widgetId slugEditor}
   * - {@helpText Voorbeeld: mijn-event-id}
   * - {@validations unique-true}
   */
  eventId?: string
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/contentful-asset.ts",
      "export type ContentfulAsset = {
  sys: {
    id: string
  }
  contentType: string
  description: string
  fileName: string
  height: number
  size: number
  title: string
  url: string
  width: number
}
",
    ],
    Array [
      "./dummy/contentful-reference.ts",
      "export type ContentfulReference = {
  sys: {
    id: string
  }
}
",
    ],
    Array [
      "./dummy/main.ts",
      "import { ModelberryPluginData } from '@modelberry/plugin-contentful/plain'
export * from './contentful-test-topic'
export * from './contentful-test-action'
export * from './contentful-navigation-section'
export * from './contentful-topic-section'
export * from './contentful-topic'
export * from './contentful-text-section'
export * from './contentful-navigation-segment'
export * from './contentful-page'
export * from './contentful-globals'
export * from './contentful-embed'
export * from './contentful-action'
export const modelberryPluginData: ModelberryPluginData = {
  '@modelberry/plugin-contentful/plain': {
    validations: {
      'size-min0-max155': { size: { max: 155, min: 0 } },
      'size-min1000-max200': { size: { max: 200, min: 1000 } },
      'linkContentType-testAction': { linkContentType: ['testAction'] },
      'linkContentType-someOtherAction': {
        linkContentType: ['someOtherAction'],
      },
      'linkContentType-action': { linkContentType: ['action'] },
      'linkContentType-navigationSegment': {
        linkContentType: ['navigationSegment'],
      },
      'in-block-card-divider': {
        in: [
          'block',
          'card',
          'divider',
          'featured',
          'gallery',
          'headline',
          'hero',
          'image',
          'quote',
          'showcase',
          'video',
        ],
      },
      'linkContentType-topic': { linkContentType: ['topic'] },
      'unique-true': { unique: true },
      'in-glacierLight-glacierDark': { in: ['glacierLight', 'glacierDark'] },
      'size-min1-max4': { size: { min: 1, max: 4 } },
      'in-activity-airplay': { in: ['activity', 'airplay'] },
      'linkMimetypeGroup-image': { linkMimetypeGroup: ['image'] },
      'linkContentType-embed': { linkContentType: ['embed'] },
      'in-text': { in: ['text'] },
      'enabledMarks-bold-italic-underline': {
        enabledMarks: ['bold', 'italic', 'underline', 'code'],
        message: 'Only bold, italic, underline, and code marks are allowed',
      },
      richText: {
        nodes: {
          'embedded-entry-block': [
            { linkContentType: ['embed', 'topicSection'] },
          ],
          'embedded-entry-inline': [
            { linkContentType: ['embed', 'topicSection'], message: null },
          ],
        },
      },
      'regexp-1': {
        message: 'Please use a valid path: /this/is/a/valid/path/with/:slug',
        regexp: {
          pattern: '^\\\\\\\\/[a-z0-9:\\\\\\\\._/~%\\\\\\\\-\\\\\\\\+&\\\\\\\\#\\\\\\\\?!=\\\\\\\\(\\\\\\\\)@]*$',
          flags: '',
        },
      },
      'linkContentType-navigationSection-tableSection-textSection': {
        linkContentType: [
          'navigationSection',
          'tableSection',
          'textSection',
          'topicSection',
        ],
      },
      'in-html-js-action-js-app': {
        in: [
          'html',
          'js-action',
          'js-app',
          'js-page-section',
          'js-page',
          'youtube',
        ],
      },
      'linkContentType-page': { linkContentType: ['page'] },
      'regexp-2': {
        message: 'Please use a valid url: https://this/is/a/valid/url',
        regexp: {
          pattern:
            '^(ftp|http|https):\\\\\\\\/\\\\\\\\/(\\\\\\\\w+:{0,1}\\\\\\\\w*@)?(\\\\\\\\S+)(:[0-9]+)?(\\\\\\\\/|\\\\\\\\/([\\\\\\\\w#!:.?+=&%@!\\\\\\\\-/]))?$',
          flags: '',
        },
      },
    },
  },
}
",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
